# Automata

./: Makefile.in  README.md  configure  configure.ac  index.html  params.json
c++.bin.tinkerdevelop/: main
src/: Makefile  exampleScript.at  main  main.cpp
src/c++.atomic.tinkerdevelop/: PositionXY.cpp  PositionXY.hpp
src/c++.controllers.tinkerdevelop/: MouseController.cpp  MouseController.hpp  RunTime.cpp  RunTime.hpp
